# Leetcode-API-Server

./: Dockerfile.api  Dockerfile.mcp  README.md  app.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  store.py
alembic/: env.py
alembic/versions/: 968e37cd1960_create_authentication_table.py  d05cbd1de849_create_users_table.py  f0ba93dfa03b_create_mcp_oauth_tables.py
auth/: dependency.py  jwt.py  oauth.py  router.py  service.py  token_service.py
common_utils/: common_fuctions.py  constants.py
database/: session.py
exception/: auth.py
leetcode/routers/: connect.py  contest.py  problem.py  profile.py  submission.py
leetcode/schema/: leetcode.py
leetcode/services/: connect.py  contest.py  problem.py  profile.py  submission.py
leetcode/services/graphql/: queries.py
mcp_server/: server.old.py  server.py  token_verifier.py
model/: __init__.py  leetcode_account.py  mcp_oauth.py  refresh_token.py  user.py
routers/: connect.py  contest.py  problem.py  profile.py  submission.py
scratch/: test_register.py
services/: contest.py  problem.py  profile.py  submission.py
