[project]
name = "leetcode-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
